@@ -333,7 +333,7 @@ operator|=
 name|needToSaveDuplicates
 expr_stmt|;
 block|}
-comment|/**      * Properly synchronized version of 'resolveObjectTree'.      */
+comment|/**      * Properly synchronized object resolution      */
 name|PrefetchProcessorNode
 name|synchronizedRootResultNodeFromDataRows
 parameter_list|(
@@ -358,6 +358,29 @@ argument_list|>
 name|extraResultsByPath
 parameter_list|)
 block|{
+name|PrefetchProcessorNode
+name|decoratedTree
+init|=
+name|decorateTree
+argument_list|(
+name|tree
+argument_list|,
+name|mainResultRows
+argument_list|,
+name|extraResultsByPath
+argument_list|)
+decl_stmt|;
+comment|// prepare data for disjoint by id prefetches
+name|decoratedTree
+operator|.
+name|traverse
+argument_list|(
+operator|new
+name|DisjointByIdProcessor
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// resolve objects under global lock to keep object graph consistent
 synchronized|synchronized
 init|(
 name|context
@@ -366,21 +389,36 @@ name|getObjectStore
 argument_list|()
 init|)
 block|{
-return|return
-name|resolveObjectTree
+comment|// do a single path for disjoint prefetches, joint subtrees will be processed at
+comment|// each disjoint node that is a parent of joint prefetches.
+name|decoratedTree
+operator|.
+name|traverse
 argument_list|(
-name|tree
-argument_list|,
-name|mainResultRows
-argument_list|,
-name|extraResultsByPath
+operator|new
+name|DisjointProcessor
+argument_list|()
 argument_list|)
+expr_stmt|;
+comment|// connect related objects
+name|decoratedTree
+operator|.
+name|traverse
+argument_list|(
+operator|new
+name|PostProcessor
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|decoratedTree
 return|;
 block|}
-block|}
+comment|/**      * create a copy of the tree using DecoratedPrefetchNodes and then traverse it resolving objects...      */
 specifier|private
 name|PrefetchProcessorNode
-name|resolveObjectTree
+name|decorateTree
 parameter_list|(
 name|PrefetchTreeNode
 name|tree
@@ -403,11 +441,7 @@ argument_list|>
 name|extraResultsByPath
 parameter_list|)
 block|{
-comment|// create a copy of the tree using DecoratedPrefetchNodes and then traverse it
-comment|// resolving objects...
-name|PrefetchProcessorNode
-name|decoratedTree
-init|=
+return|return
 operator|new
 name|PrefetchProcessorTreeBuilder
 argument_list|(
@@ -422,117 +456,14 @@ name|buildTree
 argument_list|(
 name|tree
 argument_list|)
-decl_stmt|;
-comment|// do a single path for disjoint prefetches, joint subtrees will be processed at
-comment|// each disjoint node that is a parent of joint prefetches.
-name|decoratedTree
-operator|.
-name|traverse
-argument_list|(
-operator|new
-name|DisjointProcessor
-argument_list|()
-argument_list|)
-expr_stmt|;
-comment|// connect related objects
-name|decoratedTree
-operator|.
-name|traverse
-argument_list|(
-operator|new
-name|PostProcessor
-argument_list|()
-argument_list|)
-expr_stmt|;
-return|return
-name|decoratedTree
 return|;
 block|}
 specifier|final
 class|class
-name|DisjointProcessor
+name|DisjointByIdProcessor
 implements|implements
 name|PrefetchProcessor
 block|{
-annotation|@
-name|Override
-specifier|public
-name|boolean
-name|startDisjointPrefetch
-parameter_list|(
-name|PrefetchTreeNode
-name|node
-parameter_list|)
-block|{
-name|PrefetchProcessorNode
-name|processorNode
-init|=
-operator|(
-name|PrefetchProcessorNode
-operator|)
-name|node
-decl_stmt|;
-comment|// this means something bad happened during fetch
-if|if
-condition|(
-name|processorNode
-operator|.
-name|getDataRows
-argument_list|()
-operator|==
-literal|null
-condition|)
-block|{
-return|return
-literal|false
-return|;
-block|}
-comment|// continue with processing even if the objects list is empty to handle multi-step prefetches.
-if|if
-condition|(
-name|processorNode
-operator|.
-name|getDataRows
-argument_list|()
-operator|.
-name|isEmpty
-argument_list|()
-condition|)
-block|{
-return|return
-literal|true
-return|;
-block|}
-name|List
-argument_list|<
-name|Persistent
-argument_list|>
-name|objects
-init|=
-name|processorNode
-operator|.
-name|getResolver
-argument_list|()
-operator|.
-name|objectsFromDataRows
-argument_list|(
-name|processorNode
-operator|.
-name|getDataRows
-argument_list|()
-argument_list|)
-decl_stmt|;
-name|processorNode
-operator|.
-name|setObjects
-argument_list|(
-name|objects
-argument_list|)
-expr_stmt|;
-return|return
-literal|true
-return|;
-block|}
 annotation|@
 name|Override
 specifier|public
@@ -554,7 +485,7 @@ name|isPhantom
 argument_list|()
 condition|)
 block|{
-comment|// TODO: doing nothing in current implementation if parent node is phantom
+comment|// doing nothing in current implementation if parent node is phantom
 return|return
 literal|true
 return|;
@@ -1074,10 +1005,7 @@ name|dataRows
 argument_list|)
 expr_stmt|;
 return|return
-name|startDisjointPrefetch
-argument_list|(
-name|node
-argument_list|)
+literal|true
 return|;
 block|}
 specifier|private
@@ -1245,6 +1173,182 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+annotation|@
+name|Override
+specifier|public
+name|boolean
+name|startPhantomPrefetch
+parameter_list|(
+name|PrefetchTreeNode
+name|node
+parameter_list|)
+block|{
+return|return
+literal|true
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|boolean
+name|startDisjointPrefetch
+parameter_list|(
+name|PrefetchTreeNode
+name|node
+parameter_list|)
+block|{
+return|return
+literal|true
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|boolean
+name|startJointPrefetch
+parameter_list|(
+name|PrefetchTreeNode
+name|node
+parameter_list|)
+block|{
+return|return
+literal|true
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|boolean
+name|startUnknownPrefetch
+parameter_list|(
+name|PrefetchTreeNode
+name|node
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|CayenneRuntimeException
+argument_list|(
+literal|"Unknown prefetch node: %s"
+argument_list|,
+name|node
+argument_list|)
+throw|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|void
+name|finishPrefetch
+parameter_list|(
+name|PrefetchTreeNode
+name|node
+parameter_list|)
+block|{
+block|}
+block|}
+specifier|final
+class|class
+name|DisjointProcessor
+implements|implements
+name|PrefetchProcessor
+block|{
+annotation|@
+name|Override
+specifier|public
+name|boolean
+name|startDisjointPrefetch
+parameter_list|(
+name|PrefetchTreeNode
+name|node
+parameter_list|)
+block|{
+name|PrefetchProcessorNode
+name|processorNode
+init|=
+operator|(
+name|PrefetchProcessorNode
+operator|)
+name|node
+decl_stmt|;
+comment|// this means something bad happened during fetch
+if|if
+condition|(
+name|processorNode
+operator|.
+name|getDataRows
+argument_list|()
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+comment|// continue with processing even if the objects list is empty to handle multi-step prefetches.
+if|if
+condition|(
+name|processorNode
+operator|.
+name|getDataRows
+argument_list|()
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+return|return
+literal|true
+return|;
+block|}
+name|List
+argument_list|<
+name|Persistent
+argument_list|>
+name|objects
+init|=
+name|processorNode
+operator|.
+name|getResolver
+argument_list|()
+operator|.
+name|objectsFromDataRows
+argument_list|(
+name|processorNode
+operator|.
+name|getDataRows
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|processorNode
+operator|.
+name|setObjects
+argument_list|(
+name|objects
+argument_list|)
+expr_stmt|;
+return|return
+literal|true
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|boolean
+name|startDisjointByIdPrefetch
+parameter_list|(
+name|PrefetchTreeNode
+name|node
+parameter_list|)
+block|{
+return|return
+name|startDisjointPrefetch
+argument_list|(
+name|node
+argument_list|)
+return|;
 block|}
 annotation|@
 name|Override
@@ -1612,6 +1716,7 @@ block|}
 comment|// a processor of a single joint result set that walks a subtree of prefetch nodes
 comment|// that use this result set.
 specifier|final
+specifier|static
 class|class
 name|JointProcessor
 implements|implements
